--- a/config.toml
+++ b/config.toml
@@ -21,9 +21,14 @@ ignoreFiles = ["\\.Rmd$", "\\.Rmarkdown$", "_files$", "_cache$"]
     identifier = "post"
     url = "/post/"
 [[menu.main]]
-    name = "Um síðuna"
+    name = "Verðbólguspá"
     pre = "<i class='fa fa-home fa-fw'></i>"
     weight = 3
+    url = "/inflation/"
+[[menu.main]]
+    name = "Um síðuna"
+    pre = "<i class='fa fa-home fa-fw'></i>"
+    weight = 4
     url = "/about/"
 
 
