added inflation to menu

--- a/config.toml
+++ b/config.toml
@@ -24,6 +24,7 @@ ignoreFiles = ["\\.Rmd$", "\\.Rmarkdown$", "_files$", "_cache$"]
     name = "Verðbólguspá"
     pre = "<i class='fa fa-home fa-fw'></i>"
     weight = 3
+    identifier = "inflation"
     url = "/inflation/"
 [[menu.main]]
     name = "Um síðuna"
