--- a/config.toml
+++ b/config.toml
@@ -25,7 +25,7 @@ ignoreFiles = ["\\.Rmd$", "\\.Rmarkdown$", "_files$", "_cache$"]
     pre = "<i class='fa fa-home fa-fw'></i>"
     weight = 3
     identifier = "inflation"
-    url = "/inflation/inflation/"
+    url = "/inflation/"
 [[menu.main]]
     name = "Um síðuna"
     pre = "<i class='fa fa-home fa-fw'></i>"
